# face_attendance_app

./: .gitignore  Face ID  README.md  pyproject.toml  setup.cfg  setup.py
face_attendance_app/face_attendance_app/: api.py  face_recognition_module.py  hooks.py  liveness_detection_module.py  mask_detection_module.py
face_attendance_app/face_attendance_app/public/css/: kiosk.css
face_attendance_app/face_attendance_app/public/js/: kiosk.js
face_attendance_app/face_attendance_app/www/: face_kiosk.html
