[metadata]
name = face_attendance_app
version = 0.1.0
description = Face ID attendance app for Frappe/ERPNext with mask and liveness detection
author = umohkenn
license = MIT

[options]
packages = find:
include_package_data = true
install_requires =
    frappe>=13.0.0
    face_recognition
    opencv-python
    tensorflow>=2.0.0
    numpy
    Pillow

[options.packages.find]
where = .
